# fcitx-dbus-status

./: CMakeLists.txt  INSTALL  README.md
patches/: Add-a-new-hook-to-watch-ui-status-changed.patch  README.md
scripts/: get-mozc-composition-mode.sh  monitor-status.sh  set-mozc-composition-mode.sh
src/: CMakeLists.txt  dbus-status.cpp  fcitx-dbus-status.conf.in
